[tool.poetry]
name = "hufsland-major-announcements-crawler"
version = "1"
description = "[ HUFSland ] 학과 공지사항 크롤러"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
